--- a/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/index.html
+++ b/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/index.html
@@ -14,8 +14,5 @@
   <body>
     <app-root></app-root>
   </body>
-  <!--Calling Bootstrap JS-->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
